fixed color scheme table spacing

--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -136,7 +136,7 @@ th {
 }
 
 .colors td {
-    width: 25%;
+    width: 20%;
     height: 3em;
 }
 
